examples/errors/error_duplicate_class.cay
// Error测试：重复类名
public class TestDuplicateClass {
    public static void main() {
        println("First class");
    }
}

public class TestDuplicateClass {
    public static void main() {
        println("Second class with same name");
    }
}
